fix: wrap bug

--- a/src/pages/link/App.module.less
+++ b/src/pages/link/App.module.less
@@ -25,7 +25,8 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-right: 10px; /* Updated margin */
+  margin-right: 10px;
+  /* Updated margin */
   box-sizing: border-box;
 }
 
@@ -44,6 +45,7 @@
   &:hover {
     background-color: #0056b3;
   }
+
   &:disabled {
     opacity: 0.5;
   }
@@ -67,7 +69,8 @@
 }
 
 .result-input {
-  width: 70%; /* Updated width */
+  width: 70%;
+  /* Updated width */
   height: 40px;
   padding: 8px;
   border: 1px solid #ccc;
@@ -106,6 +109,8 @@
 
 .link-table td {
   text-align: left;
+  max-width: 300px;
+  word-break: break-all;
 }
 
 .link-table .delete-button {
